Gratuitous spamming of commits list: changed all occurances of XFce to Xfce; Olivier told me once he prefered that. Sorry.
(Old svn revision: 4005)

--- a/README
+++ b/README
@@ -3,7 +3,7 @@ README for xfce version 4.x
 
 WHAT IS IT ?
 ------------
-'xfce4-panel' is the panel of the XFce Desktop Environment. It is modeled
+'xfce4-panel' is the panel of the Xfce Desktop Environment. It is modeled
 slightly after the CDE panel and, of course, previous versions of xfce.
 This version is based on GTK2 and should have all the advantages that come 
 with this new and improved toolkit (see http://www.gtk.org).
