--- a/po/ar.po
+++ b/po/ar.po
@@ -121,22 +121,22 @@ msgstr "هل أنت متاكد تريد الخروج؟"
 #, c-format
 msgid ""
 "%s, version %s\n"
-"Part of the XFce Desktop Environment\n"
+"Part of the Xfce Desktop Environment\n"
 "http://www.xfce.org\n"
 msgstr ""
 "%s, نسخة %s\n"
-"جزء من الواجهة الرسومية XFce\n"
+"جزء من الواجهة الرسومية Xfce\n"
 "http://www.xfce.org\n"
 
 #: panel/main.c:363
 msgid ""
 "Your window manager does not seem to support the new window manager hints as "
 "defined on http://www.freedesktop.org. \n"
-"Some XFce features may not work as intended."
+"Some Xfce features may not work as intended."
 msgstr ""
 "يبدوان واجهتك الرسومية ﻻ تدعم التلميحات كما"
 "تم تعريفها في http://www.freedesktop.org. \n"
-"بعض خصائص XFce قد ﻻ تعمل كما يجب"
+"بعض خصائص Xfce قد ﻻ تعمل كما يجب"
 
 #: panel/controls.c:479
 msgid "Removing the item will also remove its popup menu."
@@ -159,12 +159,12 @@ msgid "This item has no configuration options"
 msgstr "ﻻ يحوي على خيرات أعداد"
 
 #: panel/panel.c:414
-msgid "/XFce Panel"
-msgstr "/شريط XFce"
+msgid "/Xfce Panel"
+msgstr "/شريط Xfce"
 
 #: panel/panel.c:419
-msgid "/_About XFce"
-msgstr "/_حول XFce"
+msgid "/_About Xfce"
+msgstr "/_حول Xfce"
 
 #: panel/panel.c:420
 msgid "/_Help"
@@ -188,8 +188,8 @@ msgstr "/خ_روج"
 
 #: panel/panel.c:814 settings/xfce_settings_plugin.c:82
 #: settings/xfce_settings_dialog.c:649
-msgid "XFce Panel"
-msgstr "شريط XFce"
+msgid "Xfce Panel"
+msgstr "شريط Xfce"
 
 #: panel/icons.c:73
 msgid "Default"
@@ -330,8 +330,8 @@ msgid "Autohide:"
 msgstr "إخفاء تلقائي"
 
 #: settings/xfce_settings_dialog.c:663
-msgid "XFce Panel Settings"
-msgstr "إعدادات شريط XFce"
+msgid "Xfce Panel Settings"
+msgstr "إعدادات شريط Xfce"
 
 #. Appearance
 #: settings/xfce_settings_dialog.c:675
