--- a/po/az.po
+++ b/po/az.po
@@ -124,22 +124,22 @@ msgstr "Həqiqətən də çıxmaq istəyirsiniz?"
 #, c-format
 msgid ""
 "%s, version %s\n"
-"Part of the XFce Desktop Environment\n"
+"Part of the Xfce Desktop Environment\n"
 "http://www.xfce.org\n"
 msgstr ""
 "%s, buraxılış %s\n"
-"XFce Masa Üstü Mühitinin Hissəsidir\n"
+"Xfce Masa Üstü Mühitinin Hissəsidir\n"
 "http://www.xfce.org\n"
 
 #: panel/main.c:361
 msgid ""
 "Your window manager does not seem to support the new window manager hints as "
 "defined on http://www.freedesktop.org. \n"
-"Some XFce features may not work as intended."
+"Some Xfce features may not work as intended."
 msgstr ""
 "Pəncərə idarəçiniz http://www.freedesktop.org ünvanında müəyyən edilmiş yeni pəncərə "
 "idarəçisi yardım bildirişlərini dəstəkləmir. \n"
-"Bəzi XFce xüsusiyyətləri gözləndiyi kimi işləməyə bilər."
+"Bəzi Xfce xüsusiyyətləri gözləndiyi kimi işləməyə bilər."
 
 #: panel/controls.c:320 panel/panel.c:412
 msgid "/Add _new item"
@@ -158,12 +158,12 @@ msgid "This item has no configuration options"
 msgstr "Bu üzvün heç bir qurğu seçimi yoxdur"
 
 #: panel/panel.c:410
-msgid "/XFce Panel"
-msgstr "/XFce Paneli"
+msgid "/Xfce Panel"
+msgstr "/Xfce Paneli"
 
 #: panel/panel.c:415
-msgid "/_About XFce"
-msgstr "/XFce _Haqqında"
+msgid "/_About Xfce"
+msgstr "/Xfce _Haqqında"
 
 #: panel/panel.c:416
 msgid "/_Help"
@@ -187,8 +187,8 @@ msgstr "/Çı_x"
 
 #: panel/panel.c:812 settings/xfce_settings_plugin.c:82
 #: settings/xfce_settings_dialog.c:649
-msgid "XFce Panel"
-msgstr "XFce Paneli"
+msgid "Xfce Panel"
+msgstr "Xfce Paneli"
 
 #: panel/icons.c:73
 msgid "Default"
@@ -329,8 +329,8 @@ msgid "Autohide:"
 msgstr "Avtomatik gizlətmə:"
 
 #: settings/xfce_settings_dialog.c:663
-msgid "XFce Panel Settings"
-msgstr "XFce Paneli Qurğuları"
+msgid "Xfce Panel Settings"
+msgstr "Xfce Paneli Qurğuları"
 
 #. Appearance
 #: settings/xfce_settings_dialog.c:675
