--- a/po/bg.po
+++ b/po/bg.po
@@ -124,22 +124,22 @@ msgstr "Сигурни ли сте че искате да излезнете?"
 #, c-format
 msgid ""
 "%s, version %s\n"
-"Part of the XFce Desktop Environment\n"
+"Part of the Xfce Desktop Environment\n"
 "http://www.xfce.org\n"
 msgstr ""
 "%s,·версия·%s\n"
-"Част от·XFce·Desktop·Environment\n"
+"Част от·Xfce·Desktop·Environment\n"
 "http://www.xfce.org\n"
 
 #: panel/main.c:259
 msgid ""
 "Your window manager does not seem to support the new window manager hints as "
 "defined on http://www.freedesktop.org. \n"
-"Some XFce features may not work as intended."
+"Some Xfce features may not work as intended."
 msgstr ""
 "Вашият мениджър на прозорци изглежда не подържа загатвания"
 "дефинирани на http://www.freedesktop.org.·\n"
-"Някои възможности на XFce няма да работят както се очаква."
+"Някои възможности на Xfce няма да работят както се очаква."
 
 #: panel/controls.c:320 panel/panel.c:128
 msgid "/Add _new item"
@@ -158,16 +158,16 @@ msgid "This item has no configuration options"
 msgstr "Този обект няма опции за настройване"
 
 #: panel/panel.c:126
-msgid "/XFce Panel"
-msgstr "/XFce панел"
+msgid "/Xfce Panel"
+msgstr "/Xfce панел"
 
 #: panel/panel.c:131
 msgid "/_Settings manager"
 msgstr "/_Мениджър за настройки"
 
 #: panel/panel.c:133
-msgid "/_About XFce"
-msgstr "/_Относно XFce"
+msgid "/_About Xfce"
+msgstr "/_Относно Xfce"
 
 #: panel/panel.c:134
 msgid "/_Help"
@@ -183,8 +183,8 @@ msgstr "/Изход"
 
 #: panel/panel.c:494 settings/xfce_settings_plugin.c:82
 #: settings/xfce_settings_dialog.c:649
-msgid "XFce Panel"
-msgstr "XFce панел"
+msgid "Xfce Panel"
+msgstr "Xfce панел"
 
 #: panel/icons.c:73
 msgid "Default"
@@ -325,8 +325,8 @@ msgid "Autohide:"
 msgstr "Автоматично скриване:"
 
 #: settings/xfce_settings_dialog.c:663
-msgid "XFce Panel Settings"
-msgstr "XFce·настройки за панела"
+msgid "Xfce Panel Settings"
+msgstr "Xfce·настройки за панела"
 
 #. Appearance
 #: settings/xfce_settings_dialog.c:675
