--- a/po/ca.po
+++ b/po/ca.po
@@ -1,4 +1,4 @@
-# xfce4 (panel) for XFce desktop environment.
+# xfce4 (panel) for Xfce desktop environment.
 # Copyright (C) 2003 THE PACKAGE'S COPYRIGHT HOLDER
 # This file is distributed under the same license as the xfce4 package.
 # Carles Muñoz Gorriz <carlesmu@internuatas.org>, 2003.
@@ -121,18 +121,18 @@ msgstr "Esteu segur que voleu sortir?"
 #, c-format
 msgid ""
 "%s, version %s\n"
-"Part of the XFce Desktop Environment\n"
+"Part of the Xfce Desktop Environment\n"
 "http://www.xfce.org\n"
 msgstr ""
 "%s, versió %s\n"
-"Part del Entorn d'Escriptori XFce\n"
+"Part del Entorn d'Escriptori Xfce\n"
 "http://www.xfce.org\n"
 
 #: panel/main.c:361
 msgid ""
 "Your window manager does not seem to support the new window manager hints as "
 "defined on http://www.freedesktop.org. \n"
-"Some XFce features may not work as intended."
+"Some Xfce features may not work as intended."
 msgstr ""
 "El teu gestor de finestres sembla no suportar els consells del nou gestor de "
 "finestras tal com estan definits a http://www..freedesktop.org. \n"
@@ -155,12 +155,12 @@ msgid "This item has no configuration options"
 msgstr "Aquest element no té opcions de configuració"
 
 #: panel/panel.c:410
-msgid "/XFce Panel"
-msgstr "/Plafó XFce"
+msgid "/Xfce Panel"
+msgstr "/Plafó Xfce"
 
 #: panel/panel.c:415
-msgid "/_About XFce"
-msgstr "/_Quant a XFce"
+msgid "/_About Xfce"
+msgstr "/_Quant a Xfce"
 
 #: panel/panel.c:416
 msgid "/_Help"
@@ -185,8 +185,8 @@ msgstr "/S_urt"
 
 #: panel/panel.c:812 settings/xfce_settings_plugin.c:82
 #: settings/xfce_settings_dialog.c:649
-msgid "XFce Panel"
-msgstr "Plafó XFce"
+msgid "Xfce Panel"
+msgstr "Plafó Xfce"
 
 #: panel/icons.c:73
 msgid "Default"
@@ -327,8 +327,8 @@ msgid "Autohide:"
 msgstr "Ocultació automàtica:"
 
 #: settings/xfce_settings_dialog.c:663
-msgid "XFce Panel Settings"
-msgstr "Ajustaments del Plafó XFce"
+msgid "Xfce Panel Settings"
+msgstr "Ajustaments del Plafó Xfce"
 
 #. Appearance
 #: settings/xfce_settings_dialog.c:675
@@ -395,7 +395,7 @@ msgstr "Mostra els segons:"
 
 #: plugins/clock/clock.c:585
 msgid "Xfce Clock"
-msgstr "Rellotge XFce"
+msgstr "Rellotge Xfce"
 
 #: plugins/pager/pager.c:271
 msgid "Graphical pager"
