--- a/po/de.po
+++ b/po/de.po
@@ -115,28 +115,28 @@ msgstr "Starter"
 
 #: panel/main.c:117
 msgid "Are you sure you want to exit?"
-msgstr "Sind Sie sicher, dass Sie XFce beenden wollen?"
+msgstr "Sind Sie sicher, dass Sie Xfce beenden wollen?"
 
 #: panel/main.c:329
 #, c-format
 msgid ""
 "%s, version %s\n"
-"Part of the XFce Desktop Environment\n"
+"Part of the Xfce Desktop Environment\n"
 "http://www.xfce.org\n"
 msgstr ""
 "%s, Version %s\n"
-"Teil der XFce Desktop Umgebung\n"
+"Teil der Xfce Desktop Umgebung\n"
 "http://www.xfce.org\n"
 
 #: panel/main.c:361
 msgid ""
 "Your window manager does not seem to support the new window manager hints as "
 "defined on http://www.freedesktop.org. \n"
-"Some XFce features may not work as intended."
+"Some Xfce features may not work as intended."
 msgstr ""
 "Ihr Fenstermanager scheint nicht die neuen Fenstermanager-Hints, wie sie auf "
 "http://www.freedesktop.org definiert sind, zu unterstützen. \n"
-"Einige Funktionen von XFce könnten nicht wie erwartetet arbeiten"
+"Einige Funktionen von Xfce könnten nicht wie erwartetet arbeiten"
 
 #: panel/controls.c:320 panel/panel.c:412
 msgid "/Add _new item"
@@ -155,12 +155,12 @@ msgid "This item has no configuration options"
 msgstr "Dieses Objekt hat keine Optionen"
 
 #: panel/panel.c:410
-msgid "/XFce Panel"
-msgstr "/XFce Panel"
+msgid "/Xfce Panel"
+msgstr "/Xfce Panel"
 
 #: panel/panel.c:415
-msgid "/_About XFce"
-msgstr "/_Über XFce"
+msgid "/_About Xfce"
+msgstr "/_Über Xfce"
 
 #: panel/panel.c:416
 msgid "/_Help"
@@ -184,8 +184,8 @@ msgstr "/B_eenden"
 
 #: panel/panel.c:812 settings/xfce_settings_plugin.c:82
 #: settings/xfce_settings_dialog.c:649
-msgid "XFce Panel"
-msgstr "XFce Panel"
+msgid "Xfce Panel"
+msgstr "Xfce Panel"
 
 #: panel/icons.c:73
 msgid "Default"
@@ -326,8 +326,8 @@ msgid "Autohide:"
 msgstr "Autom. Ausblenden:"
 
 #: settings/xfce_settings_dialog.c:663
-msgid "XFce Panel Settings"
-msgstr "XFce Paneleinstellungen"
+msgid "Xfce Panel Settings"
+msgstr "Xfce Paneleinstellungen"
 
 #. Appearance
 #: settings/xfce_settings_dialog.c:675
@@ -394,7 +394,7 @@ msgstr "Sekunden anzeigen:"
 
 #: plugins/clock/clock.c:585
 msgid "Xfce Clock"
-msgstr "XFce Uhr"
+msgstr "Xfce Uhr"
 
 #: plugins/pager/pager.c:271
 msgid "Graphical pager"
