--- a/po/fi.po
+++ b/po/fi.po
@@ -121,22 +121,22 @@ msgstr "Haluatko lopettaa?"
 #, c-format
 msgid ""
 "%s, version %s\n"
-"Part of the XFce Desktop Environment\n"
+"Part of the Xfce Desktop Environment\n"
 "http://www.xfce.org\n"
 msgstr ""
 "%s, versio %s\n"
-"Osa XFce-työpöytäympäristöä\n"
+"Osa Xfce-työpöytäympäristöä\n"
 "http://www.xfce.org\n"
 
 #: panel/main.c:361
 msgid ""
 "Your window manager does not seem to support the new window manager hints as "
 "defined on http://www.freedesktop.org. \n"
-"Some XFce features may not work as intended."
+"Some Xfce features may not work as intended."
 msgstr ""
 "Ikkunamanagerisi ei näytä tukevan uusia ikkunamanageriohjeita, jotka on "
 "määritelty http://www.freedesktop.org.\n"
-"Jotkin XFce:n ominaisuudet eivät välttämättä toimi kuten on tarkoitus."
+"Jotkin Xfce:n ominaisuudet eivät välttämättä toimi kuten on tarkoitus."
 
 #: panel/controls.c:320 panel/panel.c:412
 msgid "/Add _new item"
@@ -155,12 +155,12 @@ msgid "This item has no configuration options"
 msgstr "Tällä osalla ei ole muokattavia ominaisuuksia"
 
 #: panel/panel.c:410
-msgid "/XFce Panel"
-msgstr "/XFce Paneeli"
+msgid "/Xfce Panel"
+msgstr "/Xfce Paneeli"
 
 #: panel/panel.c:415
-msgid "/_About XFce"
-msgstr "/_Tietoja XFce:stä"
+msgid "/_About Xfce"
+msgstr "/_Tietoja Xfce:stä"
 
 #: panel/panel.c:416
 msgid "/_Help"
@@ -185,8 +185,8 @@ msgstr "/_Poistu"
 
 #: panel/panel.c:812 settings/xfce_settings_plugin.c:82
 #: settings/xfce_settings_dialog.c:649
-msgid "XFce Panel"
-msgstr "XFce Paneeli"
+msgid "Xfce Panel"
+msgstr "Xfce Paneeli"
 
 #: panel/icons.c:73
 msgid "Default"
@@ -327,8 +327,8 @@ msgid "Autohide:"
 msgstr "Piilota automaattisesti:"
 
 #: settings/xfce_settings_dialog.c:663
-msgid "XFce Panel Settings"
-msgstr "XFce Paneelin Asetukset"
+msgid "Xfce Panel Settings"
+msgstr "Xfce Paneelin Asetukset"
 
 #. Appearance
 #: settings/xfce_settings_dialog.c:675
