--- a/po/hu.po
+++ b/po/hu.po
@@ -126,22 +126,22 @@ msgstr "Biztosan ki akar lépni?"
 #, c-format
 msgid ""
 "%s, version %s\n"
-"Part of the XFce Desktop Environment\n"
+"Part of the Xfce Desktop Environment\n"
 "http://www.xfce.org\n"
 msgstr ""
 "%s, verzió %s\n"
-"Az XFce Munkakörnyezet része\n"
+"Az Xfce Munkakörnyezet része\n"
 "http://www.xfce.org\n"
 
 #: panel/main.c:361
 msgid ""
 "Your window manager does not seem to support the new window manager hints as "
 "defined on http://www.freedesktop.org. \n"
-"Some XFce features may not work as intended."
+"Some Xfce features may not work as intended."
 msgstr ""
 "Az ablakkezelő úgy tűnik, nem támogatja az új ablakkezelő tippeket, ahogyan "
 "meghatározták a http://www.freedesktop.org-on.\n"
-"Bizonyos XFce szolgáltatások nem úgy működhetnek, ahogyan eredetileg szánták."
+"Bizonyos Xfce szolgáltatások nem úgy működhetnek, ahogyan eredetileg szánták."
 
 #: panel/controls.c:320 panel/panel.c:412
 msgid "/Add _new item"
@@ -160,12 +160,12 @@ msgid "This item has no configuration options"
 msgstr "Ennek az elemnek nincsenek beállítási lehetőségei"
 
 #: panel/panel.c:410
-msgid "/XFce Panel"
-msgstr "/XFce panel"
+msgid "/Xfce Panel"
+msgstr "/Xfce panel"
 
 #: panel/panel.c:415
-msgid "/_About XFce"
-msgstr "/XFce _névjegye"
+msgid "/_About Xfce"
+msgstr "/Xfce _névjegye"
 
 #: panel/panel.c:416
 msgid "/_Help"
@@ -189,8 +189,8 @@ msgstr "/_Kilépés"
 
 #: panel/panel.c:812 settings/xfce_settings_plugin.c:82
 #: settings/xfce_settings_dialog.c:649
-msgid "XFce Panel"
-msgstr "XFce panel"
+msgid "Xfce Panel"
+msgstr "Xfce panel"
 
 #: panel/icons.c:73
 msgid "Default"
@@ -331,8 +331,8 @@ msgid "Autohide:"
 msgstr "Automatikus elrejtés:"
 
 #: settings/xfce_settings_dialog.c:663
-msgid "XFce Panel Settings"
-msgstr "XFce panel beállításai"
+msgid "Xfce Panel Settings"
+msgstr "Xfce panel beállításai"
 
 #. Appearance
 #: settings/xfce_settings_dialog.c:675
@@ -399,7 +399,7 @@ msgstr "Másodpercek kijelzése:"
 
 #: plugins/clock/clock.c:585
 msgid "Xfce Clock"
-msgstr "XFce Óra"
+msgstr "Xfce Óra"
 
 #: plugins/pager/pager.c:271
 msgid "Graphical pager"
