--- a/po/it.po
+++ b/po/it.po
@@ -5,7 +5,7 @@
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: XFce4\n"
+"Project-Id-Version: Xfce4\n"
 "POT-Creation-Date: 2003-12-04 09:37+0100\n"
 "PO-Revision-Date: 2004-03-11 13:45+0100\n"
 "Last-Translator: Alex Dupre <ale@FreeBSD.org>\n"
@@ -125,20 +125,20 @@ msgstr "Sei sicuro di voler uscire?"
 #, c-format
 msgid ""
 "%s, version %s\n"
-"Part of the XFce Desktop Environment\n"
+"Part of the Xfce Desktop Environment\n"
 "http://www.xfce.org\n"
 msgstr ""
 "%s, versione %s\n"
-"Parte di XFce Desktop Environment\n"
+"Parte di Xfce Desktop Environment\n"
 "http://www.xfce.org\n"
 
 #: panel/main.c:259
 msgid ""
 "Your window manager does not seem to support the new window manager hints as defined on http://www.freedesktop.org. \n"
-"Some XFce features may not work as intended."
+"Some Xfce features may not work as intended."
 msgstr ""
 "Il tuo gestore di finestre non sembra supportare alcune delle specifiche definite da http://www.freedesktop.org. \n"
-"Alcune caratteristiche di XFce potrebbero non funzionare correttamente."
+"Alcune caratteristiche di Xfce potrebbero non funzionare correttamente."
 
 #: panel/controls.c:320
 #: panel/panel.c:399
@@ -159,16 +159,16 @@ msgid "This item has no configuration options"
 msgstr "Questo oggetto non ha opzioni di configurazione"
 
 #: panel/panel.c:397
-msgid "/XFce Panel"
-msgstr "/XFce Panel"
+msgid "/Xfce Panel"
+msgstr "/Xfce Panel"
 
 #: panel/panel.c:402
 msgid "/_Settings manager"
 msgstr "/Gestione impo_stazioni"
 
 #: panel/panel.c:404
-msgid "/_About XFce"
-msgstr "/_Info su XFce"
+msgid "/_About Xfce"
+msgstr "/_Info su Xfce"
 
 #: panel/panel.c:405
 msgid "/_Help"
@@ -185,8 +185,8 @@ msgstr "/_Esci"
 #: panel/panel.c:795
 #: settings/xfce_settings_plugin.c:82
 #: settings/xfce_settings_dialog.c:649
-msgid "XFce Panel"
-msgstr "Pannello XFce"
+msgid "Xfce Panel"
+msgstr "Pannello Xfce"
 
 #: panel/icons.c:73
 msgid "Default"
@@ -331,8 +331,8 @@ msgid "Autohide:"
 msgstr "Autoscomparsa:"
 
 #: settings/xfce_settings_dialog.c:663
-msgid "XFce Panel Settings"
-msgstr "Impostazioni del Pannello di XFce"
+msgid "Xfce Panel Settings"
+msgstr "Impostazioni del Pannello di Xfce"
 
 #. Appearance
 #: settings/xfce_settings_dialog.c:675
@@ -463,7 +463,7 @@ msgstr "Mostra i secondi:"
 
 #: plugins/clock/clock.c:599
 msgid "Xfce Clock"
-msgstr "Orologio di XFce"
+msgstr "Orologio di Xfce"
 
 #: plugins/pager/pager.c:271
 msgid "Graphical pager"
