--- a/po/ja.po
+++ b/po/ja.po
@@ -123,21 +123,21 @@ msgstr "本当に終了してもいいですか？"
 #, c-format
 msgid ""
 "%s, version %s\n"
-"Part of the XFce Desktop Environment\n"
+"Part of the Xfce Desktop Environment\n"
 "http://www.xfce.org\n"
 msgstr ""
-"XFceデスクトップ環境部品\n"
+"Xfceデスクトップ環境部品\n"
 "http://www.xfce.org\n"
 
 #: panel/main.c:361
 msgid ""
 "Your window manager does not seem to support the new window manager hints as "
 "defined on http://www.freedesktop.org. \n"
-"Some XFce features may not work as intended."
+"Some Xfce features may not work as intended."
 msgstr ""
 "あなたのウィンド・マネージャは、http://www.freedesktop.orgで定義された新しい"
 "ヒントをサポートしていません。\n"
-"XFceの特徴は、いくつか意図する通りに動かないかもしれません。"
+"Xfceの特徴は、いくつか意図する通りに動かないかもしれません。"
 
 #: panel/controls.c:320 panel/panel.c:412
 msgid "/Add _new item"
@@ -156,12 +156,12 @@ msgid "This item has no configuration options"
 msgstr "この項目に、オプション設定は存在しません"
 
 #: panel/panel.c:410
-msgid "/XFce Panel"
-msgstr "/XFceパネル"
+msgid "/Xfce Panel"
+msgstr "/Xfceパネル"
 
 #: panel/panel.c:415
-msgid "/_About XFce"
-msgstr "/XFceについて (_A)"
+msgid "/_About Xfce"
+msgstr "/Xfceについて (_A)"
 
 #: panel/panel.c:416
 msgid "/_Help"
@@ -186,8 +186,8 @@ msgstr "/終了 (_x)"
 
 #: panel/panel.c:812 settings/xfce_settings_plugin.c:82
 #: settings/xfce_settings_dialog.c:649
-msgid "XFce Panel"
-msgstr "XFceパネル"
+msgid "Xfce Panel"
+msgstr "Xfceパネル"
 
 #: panel/icons.c:73
 msgid "Default"
@@ -328,8 +328,8 @@ msgid "Autohide:"
 msgstr "自動で隠す"
 
 #: settings/xfce_settings_dialog.c:663
-msgid "XFce Panel Settings"
-msgstr "XFce パネル設定"
+msgid "Xfce Panel Settings"
+msgstr "Xfce パネル設定"
 
 #. Appearance
 #: settings/xfce_settings_dialog.c:675
@@ -396,7 +396,7 @@ msgstr "秒表示:"
 
 #: plugins/clock/clock.c:585
 msgid "Xfce Clock"
-msgstr "XFce時計"
+msgstr "Xfce時計"
 
 #: plugins/pager/pager.c:271
 msgid "Graphical pager"
