--- a/po/lt.po
+++ b/po/lt.po
@@ -121,22 +121,22 @@ msgstr "Ar tikrai norite iðeiti?"
 #, c-format
 msgid ""
 "%s, version %s\n"
-"Part of the XFce Desktop Environment\n"
+"Part of the Xfce Desktop Environment\n"
 "http://www.xfce.org\n"
 msgstr ""
 "%s, versija %s\n"
-"Dalis XFce Desktop Environment\n"
+"Dalis Xfce Desktop Environment\n"
 "http://www.xfce.org\n"
 
 #: panel/main.c:361
 msgid ""
 "Your window manager does not seem to support the new window manager hints as "
 "defined on http://www.freedesktop.org. \n"
-"Some XFce features may not work as intended."
+"Some Xfce features may not work as intended."
 msgstr ""
 "Atrodo, kad jûsø langø tvarkyklë nepalaiko naujø langø tvarkykliø patarimø "
 "apibrëþtø tinklalapyje http://www.freedesktop.org. \n"
-"Keletas XFce sudëtiniø daliø gali neveikti kaip numatyta."
+"Keletas Xfce sudëtiniø daliø gali neveikti kaip numatyta."
 
 #: panel/controls.c:320 panel/panel.c:412
 msgid "/Add _new item"
@@ -155,12 +155,12 @@ msgid "This item has no configuration options"
 msgstr "Ðis elementas neturi parinkties parametrø "
 
 #: panel/panel.c:410
-msgid "/XFce Panel"
-msgstr "/XFce Skydelis"
+msgid "/Xfce Panel"
+msgstr "/Xfce Skydelis"
 
 #: panel/panel.c:415
-msgid "/_About XFce"
-msgstr "/_Apie XFce"
+msgid "/_About Xfce"
+msgstr "/_Apie Xfce"
 
 #: panel/panel.c:416
 msgid "/_Help"
@@ -184,8 +184,8 @@ msgstr "/Ið_eiti"
 
 #: panel/panel.c:812 settings/xfce_settings_plugin.c:82
 #: settings/xfce_settings_dialog.c:649
-msgid "XFce Panel"
-msgstr "XFce Skydelis"
+msgid "Xfce Panel"
+msgstr "Xfce Skydelis"
 
 #: panel/icons.c:73
 msgid "Default"
@@ -326,8 +326,8 @@ msgid "Autohide:"
 msgstr "Autopaslëpimas"
 
 #: settings/xfce_settings_dialog.c:663
-msgid "XFce Panel Settings"
-msgstr "XFce skydelio nustatymai"
+msgid "Xfce Panel Settings"
+msgstr "Xfce skydelio nustatymai"
 
 #. Appearance
 #: settings/xfce_settings_dialog.c:675
