--- a/po/ms.po
+++ b/po/ms.po
@@ -121,22 +121,22 @@ msgstr "Adakah anda pasti untuk keluar?"
 #, c-format
 msgid ""
 "%s, version %s\n"
-"Part of the XFce Desktop Environment\n"
+"Part of the Xfce Desktop Environment\n"
 "http://www.xfce.org\n"
 msgstr ""
 "%s, versi %s\n"
-"Sebahagian Persekitaran Meja XFce\n"
+"Sebahagian Persekitaran Meja Xfce\n"
 "http://www.xfce.org\n"
 
 #: panel/main.c:363
 msgid ""
 "Your window manager does not seem to support the new window manager hints as "
 "defined on http://www.freedesktop.org. \n"
-"Some XFce features may not work as intended."
+"Some Xfce features may not work as intended."
 msgstr ""
 "Pengurus tetingkap anda nampaknya tidak menyokong petua pengurus tetingkap "
 "baru sebagai yang didefinasikan di http://www.freedesktop.org. \n"
-"Sebahagian ciri-ciri XFce tidak bekerja seperti yang dikehendaki."
+"Sebahagian ciri-ciri Xfce tidak bekerja seperti yang dikehendaki."
 
 #: panel/controls.c:479
 msgid "Removing the item will also remove its popup menu."
@@ -159,12 +159,12 @@ msgid "This item has no configuration options"
 msgstr "Item ini tiada opsyen konfigurasi"
 
 #: panel/panel.c:414
-msgid "/XFce Panel"
-msgstr "/Panel XFce"
+msgid "/Xfce Panel"
+msgstr "/Panel Xfce"
 
 #: panel/panel.c:419
-msgid "/_About XFce"
-msgstr "/Perih_al XFce"
+msgid "/_About Xfce"
+msgstr "/Perih_al Xfce"
 
 #: panel/panel.c:420
 msgid "/_Help"
@@ -188,8 +188,8 @@ msgstr "/K_eluar"
 
 #: panel/panel.c:814 settings/xfce_settings_plugin.c:82
 #: settings/xfce_settings_dialog.c:649
-msgid "XFce Panel"
-msgstr "Panel XFce"
+msgid "Xfce Panel"
+msgstr "Panel Xfce"
 
 #: panel/icons.c:73
 msgid "Default"
@@ -330,8 +330,8 @@ msgid "Autohide:"
 msgstr "Autosembunyi:"
 
 #: settings/xfce_settings_dialog.c:663
-msgid "XFce Panel Settings"
-msgstr "Tetapan Panel XFce"
+msgid "Xfce Panel Settings"
+msgstr "Tetapan Panel Xfce"
 
 #. Appearance
 #: settings/xfce_settings_dialog.c:675
