--- a/po/nl.po
+++ b/po/nl.po
@@ -1,4 +1,4 @@
-# XFce 4 Panel.
+# Xfce 4 Panel.
 # Copyright (C) 2003 Jasper Huijsmans 
 # This file is distributed under the same license as the xfce4 package.
 # Jasper Huijsmans <huysmans@users.sourceforge.net>, 2003.
@@ -123,22 +123,22 @@ msgstr "Weet u zeker dat u wil afsluiten?"
 #, c-format
 msgid ""
 "%s, version %s\n"
-"Part of the XFce Desktop Environment\n"
+"Part of the Xfce Desktop Environment\n"
 "http://www.xfce.org\n"
 msgstr ""
 "%s, versie %s\n"
-"Onderdeel van de XFce Desktop Environment\n"
+"Onderdeel van de Xfce Desktop Environment\n"
 "http://www.xfce.org\n"
 
 #: panel/main.c:361
 msgid ""
 "Your window manager does not seem to support the new window manager hints as "
 "defined on http://www.freedesktop.org. \n"
-"Some XFce features may not work as intended."
+"Some Xfce features may not work as intended."
 msgstr ""
 "De window manager ondersteunt de nieuwe window manager hints niet, die "
 "zijn gedefinieerd op http://www.freedesktop.org. \n"
-"Sommige XFce functie zullen niet werken zoals bedoeld."
+"Sommige Xfce functie zullen niet werken zoals bedoeld."
 
 #: panel/controls.c:320 panel/panel.c:412
 msgid "/Add _new item"
@@ -157,12 +157,12 @@ msgid "This item has no configuration options"
 msgstr "Geen configuratie opties"
 
 #: panel/panel.c:410
-msgid "/XFce Panel"
-msgstr "/XFce Panel"
+msgid "/Xfce Panel"
+msgstr "/Xfce Panel"
 
 #: panel/panel.c:415
-msgid "/_About XFce"
-msgstr "/XFce _info"
+msgid "/_About Xfce"
+msgstr "/Xfce _info"
 
 #: panel/panel.c:416
 msgid "/_Help"
@@ -187,8 +187,8 @@ msgstr "/_Afsluiten"
 
 #: panel/panel.c:812 settings/xfce_settings_plugin.c:82
 #: settings/xfce_settings_dialog.c:649
-msgid "XFce Panel"
-msgstr "XFce Panel"
+msgid "Xfce Panel"
+msgstr "Xfce Panel"
 
 #: panel/icons.c:73
 msgid "Default"
@@ -329,8 +329,8 @@ msgid "Autohide:"
 msgstr "Automatisch verbergen:"
 
 #: settings/xfce_settings_dialog.c:663
-msgid "XFce Panel Settings"
-msgstr "XFce Panel Opties"
+msgid "Xfce Panel Settings"
+msgstr "Xfce Panel Opties"
 
 #. Appearance
 #: settings/xfce_settings_dialog.c:675
