--- a/po/no.po
+++ b/po/no.po
@@ -122,22 +122,22 @@ msgstr "Er du sikker på at du vil avslutte?"
 #, c-format
 msgid ""
 "%s, version %s\n"
-"Part of the XFce Desktop Environment\n"
+"Part of the Xfce Desktop Environment\n"
 "http://www.xfce.org\n"
 msgstr ""
 "%s, versjon %s\n"
-"Del av XFce skrivebordsmiljøet\n"
+"Del av Xfce skrivebordsmiljøet\n"
 "http://www.xfce.org\n"
 
 #: panel/main.c:361
 msgid ""
 "Your window manager does not seem to support the new window manager hints as "
 "defined on http://www.freedesktop.org. \n"
-"Some XFce features may not work as intended."
+"Some Xfce features may not work as intended."
 msgstr ""
 "Vinduhåndtereren din ser ikke ut til å støtte de vinduhånteringshintene som er "
 "definert av http://www.freedesktop.org. \n"
-"Noen XFce egenskaper virker kanskje ikke som påtenkt."
+"Noen Xfce egenskaper virker kanskje ikke som påtenkt."
 
 #: panel/controls.c:320 panel/panel.c:412
 msgid "/Add _new item"
@@ -156,12 +156,12 @@ msgid "This item has no configuration options"
 msgstr "Dette elementet har konfigurasjons alternativer"
 
 #: panel/panel.c:410
-msgid "/XFce Panel"
-msgstr "/XFce Panel"
+msgid "/Xfce Panel"
+msgstr "/Xfce Panel"
 
 #: panel/panel.c:415
-msgid "/_About XFce"
-msgstr "/_Om XFce"
+msgid "/_About Xfce"
+msgstr "/_Om Xfce"
 
 #: panel/panel.c:416
 msgid "/_Help"
@@ -185,8 +185,8 @@ msgstr "/A_vslutt"
 
 #: panel/panel.c:812 settings/xfce_settings_plugin.c:82
 #: settings/xfce_settings_dialog.c:649
-msgid "XFce Panel"
-msgstr "XFce Panel"
+msgid "Xfce Panel"
+msgstr "Xfce Panel"
 
 #: panel/icons.c:73
 msgid "Default"
@@ -327,8 +327,8 @@ msgid "Autohide:"
 msgstr "Autogjem:"
 
 #: settings/xfce_settings_dialog.c:663
-msgid "XFce Panel Settings"
-msgstr "XFce panel instillinger"
+msgid "Xfce Panel Settings"
+msgstr "Xfce panel instillinger"
 
 #. Appearance
 #: settings/xfce_settings_dialog.c:675
