--- a/po/pl.po
+++ b/po/pl.po
@@ -1,6 +1,6 @@
-# Treanslation file for XFce4's panel.
+# Treanslation file for Xfce4's panel.
 # Copyright (C) Olivier Fourdain, 2003
-# This file is distributed under the same license as the XFce4.
+# This file is distributed under the same license as the Xfce4.
 # FIRST AUTHOR <edscott@imp.mx>, 2003.
 #
 #  Paweł Pastuła <pastulap@poczta.onet.pl>, 2003
@@ -132,7 +132,7 @@ msgstr "Czy na pewno chcesz wyjść?"
 #, c-format
 msgid ""
 "%s, version %s\n"
-"Part of the XFce Desktop Environment\n"
+"Part of the Xfce Desktop Environment\n"
 "http://www.xfce.org\n"
 msgstr ""
 "%s, wersja %s\n"
@@ -143,11 +143,11 @@ msgstr ""
 msgid ""
 "Your window manager does not seem to support the new window manager hints as "
 "defined on http://www.freedesktop.org. \n"
-"Some XFce features may not work as intended."
+"Some Xfce features may not work as intended."
 msgstr ""
 "Twój menadżer okien nie obsługuje pewnych wskazówek menadżera okien "
 "zefiniowanych na stronie: http://www.freedesktop.org. \n"
-"Niektóre funkcje XFce mogą nie działać jak powinny."
+"Niektóre funkcje Xfce mogą nie działać jak powinny."
 
 #: panel/controls.c:320 panel/panel.c:123
 msgid "/Add _new item"
@@ -166,16 +166,16 @@ msgid "This item has no configuration options"
 msgstr "Ten element nie ma konfigurowalnych opcji"
 
 #: panel/panel.c:121
-msgid "/XFce Panel"
-msgstr "/Panel XFce"
+msgid "/Xfce Panel"
+msgstr "/Panel Xfce"
 
 #: panel/panel.c:126
 msgid "/_Settings manager"
 msgstr "/_Menadżer ustawień"
 
 #: panel/panel.c:128
-msgid "/_About XFce"
-msgstr "/_O XFce"
+msgid "/_About Xfce"
+msgstr "/_O Xfce"
 
 #: panel/panel.c:129
 msgid "/_Help"
@@ -191,8 +191,8 @@ msgstr "/W_yjście"
 
 #: panel/panel.c:489 settings/xfce_settings_plugin.c:82
 #: settings/xfce_settings_dialog.c:649
-msgid "XFce Panel"
-msgstr "Panel XFce"
+msgid "Xfce Panel"
+msgstr "Panel Xfce"
 
 #: panel/icons.c:73
 msgid "Default"
@@ -333,8 +333,8 @@ msgid "Autohide:"
 msgstr "Automatyczne ukrywanie:"
 
 #: settings/xfce_settings_dialog.c:663
-msgid "XFce Panel Settings"
-msgstr "Ustawienia panelu XFce"
+msgid "Xfce Panel Settings"
+msgstr "Ustawienia panelu Xfce"
 
 #. Appearance
 #: settings/xfce_settings_dialog.c:675
@@ -466,7 +466,7 @@ msgstr "Pokaż sekundy:"
 
 #: plugins/clock/clock.c:599
 msgid "Xfce Clock"
-msgstr "Zegar XFce"
+msgstr "Zegar Xfce"
 
 #: plugins/pager/pager.c:271
 msgid "Graphical pager"
