--- a/po/pt_BR.po
+++ b/po/pt_BR.po
@@ -122,22 +122,22 @@ msgstr "Tem certeza que deseja sair?"
 #, c-format
 msgid ""
 "%s, version %s\n"
-"Part of the XFce Desktop Environment\n"
+"Part of the Xfce Desktop Environment\n"
 "http://www.xfce.org\n"
 msgstr ""
 "%s, versão %s\n"
-"Parte do Ambiente Desktop XFce\n"
+"Parte do Ambiente Desktop Xfce\n"
 "http://www.xfce.org\n"
 
 #: panel/main.c:361
 msgid ""
 "Your window manager does not seem to support the new window manager hints as "
 "defined on http://www.freedesktop.org. \n"
-"Some XFce features may not work as intended."
+"Some Xfce features may not work as intended."
 msgstr ""
 "Seu gerenciador de janelas parece não suportar as novas definições de dicas como\n"
 "definidas em http://www.freedesktop.org.\n"
-"Algumas características do XFce podem não funcionar com pretendido."
+"Algumas características do Xfce podem não funcionar com pretendido."
 
 #: panel/controls.c:320 panel/panel.c:412
 msgid "/Add _new item"
@@ -156,12 +156,12 @@ msgid "This item has no configuration options"
 msgstr "Este item não possui opções de configuração"
 
 #: panel/panel.c:410
-msgid "/XFce Panel"
-msgstr "/Painel XFce"
+msgid "/Xfce Panel"
+msgstr "/Painel Xfce"
 
 #: panel/panel.c:415
-msgid "/_About XFce"
-msgstr "/_Sobre XFce"
+msgid "/_About Xfce"
+msgstr "/_Sobre Xfce"
 
 #: panel/panel.c:416
 msgid "/_Help"
@@ -185,8 +185,8 @@ msgstr "/Sai_r"
 
 #: panel/panel.c:812 settings/xfce_settings_plugin.c:82
 #: settings/xfce_settings_dialog.c:649
-msgid "XFce Panel"
-msgstr "Painel XFce"
+msgid "Xfce Panel"
+msgstr "Painel Xfce"
 
 #: panel/icons.c:73
 msgid "Default"
@@ -327,8 +327,8 @@ msgid "Autohide:"
 msgstr "Auto-Ocultar:"
 
 #: settings/xfce_settings_dialog.c:663
-msgid "XFce Panel Settings"
-msgstr "Configurações do painel do XFce"
+msgid "Xfce Panel Settings"
+msgstr "Configurações do painel do Xfce"
 
 #. Appearance
 #: settings/xfce_settings_dialog.c:675
@@ -395,7 +395,7 @@ msgstr "Mostrar segundos:"
 
 #: plugins/clock/clock.c:585
 msgid "Xfce Clock"
-msgstr "Relógio XFce"
+msgstr "Relógio Xfce"
 
 #: plugins/pager/pager.c:271
 msgid "Graphical pager"
