--- a/po/pt_PT.po
+++ b/po/pt_PT.po
@@ -124,7 +124,7 @@ msgstr "Tem a certeza que deseja sair?"
 #, c-format
 msgid ""
 "%s, version %s\n"
-"Part of the XFce Desktop Environment\n"
+"Part of the Xfce Desktop Environment\n"
 "http://www.xfce.org\n"
 msgstr ""
 "%s, versão %s\n"
@@ -135,11 +135,11 @@ msgstr ""
 msgid ""
 "Your window manager does not seem to support the new window manager hints as "
 "defined on http://www.freedesktop.org. \n"
-"Some XFce features may not work as intended."
+"Some Xfce features may not work as intended."
 msgstr ""
 "O seu gestor de janelas parece não suportar as novas dicas de janelas como "
 "está definido em http://www.freedesktop.org.\n"
-"Algumas funcionalidades do XFce poderão não funcionar como esperado."
+"Algumas funcionalidades do Xfce poderão não funcionar como esperado."
 
 #: panel/controls.c:320 panel/panel.c:412
 msgid "/Add _new item"
@@ -158,12 +158,12 @@ msgid "This item has no configuration options"
 msgstr "Este item não tem opções para configurar"
 
 #: panel/panel.c:410
-msgid "/XFce Panel"
-msgstr "/Painel do XFce"
+msgid "/Xfce Panel"
+msgstr "/Painel do Xfce"
 
 #: panel/panel.c:415
-msgid "/_About XFce"
-msgstr "/S_obre o XFce"
+msgid "/_About Xfce"
+msgstr "/S_obre o Xfce"
 
 #: panel/panel.c:416
 msgid "/_Help"
@@ -187,8 +187,8 @@ msgstr "/_Sair"
 
 #: panel/panel.c:812 settings/xfce_settings_plugin.c:82
 #: settings/xfce_settings_dialog.c:649
-msgid "XFce Panel"
-msgstr "Painel do XFce"
+msgid "Xfce Panel"
+msgstr "Painel do Xfce"
 
 #: panel/icons.c:73
 msgid "Default"
@@ -329,8 +329,8 @@ msgid "Autohide:"
 msgstr "Esconder automáticamente:"
 
 #: settings/xfce_settings_dialog.c:663
-msgid "XFce Panel Settings"
-msgstr "Definições do Painel XFce"
+msgid "Xfce Panel Settings"
+msgstr "Definições do Painel Xfce"
 
 #. Appearance
 #: settings/xfce_settings_dialog.c:675
@@ -397,7 +397,7 @@ msgstr "Mostrar segundos:"
 
 #: plugins/clock/clock.c:585
 msgid "Xfce Clock"
-msgstr "Relógio XFce"
+msgstr "Relógio Xfce"
 
 #: plugins/pager/pager.c:271
 msgid "Graphical pager"
