--- a/po/ru.po
+++ b/po/ru.po
@@ -121,22 +121,22 @@ msgstr "Вы уверены, что хотите выйти?"
 #, c-format
 msgid ""
 "%s, version %s\n"
-"Part of the XFce Desktop Environment\n"
+"Part of the Xfce Desktop Environment\n"
 "http://www.xfce.org\n"
 msgstr ""
 "%s, версия %s\n"
-"Часть рабочей среды XFce\n"
+"Часть рабочей среды Xfce\n"
 "http://www.xfce.org\n"
 
 #: panel/main.c:361
 msgid ""
 "Your window manager does not seem to support the new window manager hints as "
 "defined on http://www.freedesktop.org. \n"
-"Some XFce features may not work as intended."
+"Some Xfce features may not work as intended."
 msgstr ""
 "Ваш менеджер окон не поддерживает новые возможности, определенные на http://"
 "www.freedesktop.org. \n"
-"Возможно некоторые возможности XFce не будут правильно работать."
+"Возможно некоторые возможности Xfce не будут правильно работать."
 
 #: panel/controls.c:320 panel/panel.c:412
 msgid "/Add _new item"
@@ -155,12 +155,12 @@ msgid "This item has no configuration options"
 msgstr "Обьект не имеет настраиваемых параметров"
 
 #: panel/panel.c:410
-msgid "/XFce Panel"
-msgstr "/Панель XFce"
+msgid "/Xfce Panel"
+msgstr "/Панель Xfce"
 
 #: panel/panel.c:415
-msgid "/_About XFce"
-msgstr "/Об XFce"
+msgid "/_About Xfce"
+msgstr "/Об Xfce"
 
 #: panel/panel.c:416
 msgid "/_Help"
@@ -184,8 +184,8 @@ msgstr "/Выход"
 
 #: panel/panel.c:812 settings/xfce_settings_plugin.c:82
 #: settings/xfce_settings_dialog.c:649
-msgid "XFce Panel"
-msgstr "Панель XFce"
+msgid "Xfce Panel"
+msgstr "Панель Xfce"
 
 #: panel/icons.c:73
 msgid "Default"
@@ -326,8 +326,8 @@ msgid "Autohide:"
 msgstr "Автоматически скрывать:"
 
 #: settings/xfce_settings_dialog.c:663
-msgid "XFce Panel Settings"
-msgstr "Настройки панели XFce"
+msgid "Xfce Panel Settings"
+msgstr "Настройки панели Xfce"
 
 #. Appearance
 #: settings/xfce_settings_dialog.c:675
@@ -394,7 +394,7 @@ msgstr "Показывать секунды:"
 
 #: plugins/clock/clock.c:585
 msgid "Xfce Clock"
-msgstr "Часы XFce"
+msgstr "Часы Xfce"
 
 #: plugins/pager/pager.c:271
 msgid "Graphical pager"
