--- a/po/sv.po
+++ b/po/sv.po
@@ -122,22 +122,22 @@ msgstr "Är du säker på att du vill avsluta?"
 #, c-format
 msgid ""
 "%s, version %s\n"
-"Part of the XFce Desktop Environment\n"
+"Part of the Xfce Desktop Environment\n"
 "http://www.xfce.org\n"
 msgstr ""
 "%s, version %s\n"
-"Del av skrivbordsmiljön XFce\n"
+"Del av skrivbordsmiljön Xfce\n"
 "http://www.xfce.org\n"
 
 #: panel/main.c:361
 msgid ""
 "Your window manager does not seem to support the new window manager hints as "
 "defined on http://www.freedesktop.org. \n"
-"Some XFce features may not work as intended."
+"Some Xfce features may not work as intended."
 msgstr ""
 "din fönsterhanterare verkar inte stödja de nya fönsterhanterarledtrådarna "
 "såsomdefinierade på http://www.freedesktop.org. \n"
-"Detta kan begränsa XFce:s avsedda funktionalitet."
+"Detta kan begränsa Xfce:s avsedda funktionalitet."
 
 #: panel/controls.c:320 panel/panel.c:412
 msgid "/Add _new item"
@@ -156,12 +156,12 @@ msgid "This item has no configuration options"
 msgstr "Detta objekt saknar konfigurationsalternativ"
 
 #: panel/panel.c:410
-msgid "/XFce Panel"
-msgstr "/XFce-panelen"
+msgid "/Xfce Panel"
+msgstr "/Xfce-panelen"
 
 #: panel/panel.c:415
-msgid "/_About XFce"
-msgstr "/_Om XFce"
+msgid "/_About Xfce"
+msgstr "/_Om Xfce"
 
 #: panel/panel.c:416
 msgid "/_Help"
@@ -185,8 +185,8 @@ msgstr "/_Avsluta"
 
 #: panel/panel.c:812 settings/xfce_settings_plugin.c:82
 #: settings/xfce_settings_dialog.c:649
-msgid "XFce Panel"
-msgstr "XFce-panelen"
+msgid "Xfce Panel"
+msgstr "Xfce-panelen"
 
 #: panel/icons.c:73
 msgid "Default"
@@ -327,8 +327,8 @@ msgid "Autohide:"
 msgstr "Autogöm:"
 
 #: settings/xfce_settings_dialog.c:663
-msgid "XFce Panel Settings"
-msgstr "XFce panelinställningar"
+msgid "Xfce Panel Settings"
+msgstr "Xfce panelinställningar"
 
 #. Appearance
 #: settings/xfce_settings_dialog.c:675
@@ -395,7 +395,7 @@ msgstr "Visa sekunder:"
 
 #: plugins/clock/clock.c:585
 msgid "Xfce Clock"
-msgstr "XFce-klocka"
+msgstr "Xfce-klocka"
 
 #: plugins/pager/pager.c:271
 msgid "Graphical pager"
