--- a/po/tr.po
+++ b/po/tr.po
@@ -122,22 +122,22 @@ msgstr "Çıkmak istediğinizden emin misiniz?"
 #, c-format
 msgid ""
 "%s, version %s\n"
-"Part of the XFce Desktop Environment\n"
+"Part of the Xfce Desktop Environment\n"
 "http://www.xfce.org\n"
 msgstr ""
 "%s, sürüm %s\n"
-"XFce Masaüstü Ortamının bir bileşeni\n"
+"Xfce Masaüstü Ortamının bir bileşeni\n"
 "http://www.xfce.org\n"
 
 #: panel/main.c:361
 msgid ""
 "Your window manager does not seem to support the new window manager hints as "
 "defined on http://www.freedesktop.org. \n"
-"Some XFce features may not work as intended."
+"Some Xfce features may not work as intended."
 msgstr ""
 "Kullandığınız pencere yöneticisi http://www.freedesktop.org' ta belirtilen "
 "ipuçlarını desteklemiyor görünüyor. \n"
-"Bazı XFce özellikleri çalışmayabilir."
+"Bazı Xfce özellikleri çalışmayabilir."
 
 #: panel/controls.c:320 panel/panel.c:412
 msgid "/Add _new item"
@@ -156,12 +156,12 @@ msgid "This item has no configuration options"
 msgstr "Bu nesne ayarlanabilir seçenek sunmuyor"
 
 #: panel/panel.c:410
-msgid "/XFce Panel"
-msgstr "/XFce Paneli"
+msgid "/Xfce Panel"
+msgstr "/Xfce Paneli"
 
 #: panel/panel.c:415
-msgid "/_About XFce"
-msgstr "/XFce _Hakkında"
+msgid "/_About Xfce"
+msgstr "/Xfce _Hakkında"
 
 #: panel/panel.c:416
 msgid "/_Help"
@@ -185,8 +185,8 @@ msgstr "/_Çık"
 
 #: panel/panel.c:812 settings/xfce_settings_plugin.c:82
 #: settings/xfce_settings_dialog.c:649
-msgid "XFce Panel"
-msgstr "XFce Paneli"
+msgid "Xfce Panel"
+msgstr "Xfce Paneli"
 
 #: panel/icons.c:73
 msgid "Default"
@@ -327,8 +327,8 @@ msgid "Autohide:"
 msgstr "Otomatik Gizleme:"
 
 #: settings/xfce_settings_dialog.c:663
-msgid "XFce Panel Settings"
-msgstr "XFce Panel Ayarları"
+msgid "Xfce Panel Settings"
+msgstr "Xfce Panel Ayarları"
 
 #. Appearance
 #: settings/xfce_settings_dialog.c:675
