--- a/po/uk.po
+++ b/po/uk.po
@@ -122,22 +122,22 @@ msgstr "Ви впевнені що хочете вийти?"
 #, c-format
 msgid ""
 "%s, version %s\n"
-"Part of the XFce Desktop Environment\n"
+"Part of the Xfce Desktop Environment\n"
 "http://www.xfce.org\n"
 msgstr ""
 "%s, версія %s\n"
-"Частина робочого середовища XFce\n"
+"Частина робочого середовища Xfce\n"
 "http://www.xfce.org\n"
 
 #: panel/main.c:284
 msgid ""
 "Your window manager does not seem to support the new window manager hints as "
 "defined on http://www.freedesktop.org. \n"
-"Some XFce features may not work as intended."
+"Some Xfce features may not work as intended."
 msgstr ""
 "Ваш віконний менеджер не підтримує нові можливості, які визначено на "
 "http://www.freedesktop.org.\n"
-"Деякі можливості XFce можуть не робити відповідним чином."
+"Деякі можливості Xfce можуть не робити відповідним чином."
 
 #: panel/controls.c:320 panel/panel.c:123
 msgid "/Add _new item"
@@ -156,16 +156,16 @@ msgid "This item has no configuration options"
 msgstr "Об'єкт не має параметрів налаштування"
 
 #: panel/panel.c:121
-msgid "/XFce Panel"
-msgstr "/Панель XFce"
+msgid "/Xfce Panel"
+msgstr "/Панель Xfce"
 
 #: panel/panel.c:126
 msgid "/_Settings manager"
 msgstr "/Менеджер _параметрів"
 
 #: panel/panel.c:128
-msgid "/_About XFce"
-msgstr "/_Про XFce"
+msgid "/_About Xfce"
+msgstr "/_Про Xfce"
 
 #: panel/panel.c:129
 msgid "/_Help"
@@ -181,8 +181,8 @@ msgstr "/Ви_йти"
 
 #: panel/panel.c:489 settings/xfce_settings_plugin.c:82
 #: settings/xfce_settings_dialog.c:649
-msgid "XFce Panel"
-msgstr "Панель XFce"
+msgid "Xfce Panel"
+msgstr "Панель Xfce"
 
 #: panel/icons.c:73
 msgid "Default"
@@ -323,8 +323,8 @@ msgid "Autohide:"
 msgstr "Автоматично приховувати:"
 
 #: settings/xfce_settings_dialog.c:663
-msgid "XFce Panel Settings"
-msgstr "Параметри панелі XFce"
+msgid "Xfce Panel Settings"
+msgstr "Параметри панелі Xfce"
 
 #. Appearance
 #: settings/xfce_settings_dialog.c:675
