--- a/po/vi.po
+++ b/po/vi.po
@@ -121,22 +121,22 @@ msgstr "Xác nhận thoát?"
 #, c-format
 msgid ""
 "%s, version %s\n"
-"Part of the XFce Desktop Environment\n"
+"Part of the Xfce Desktop Environment\n"
 "http://www.xfce.org\n"
 msgstr ""
 "%s, phiên bản %s\n"
-"Bộ phận của Môi trường desktop XFce\n"
+"Bộ phận của Môi trường desktop Xfce\n"
 "http://www.xfce.org\n"
 
 #: panel/main.c:361
 msgid ""
 "Your window manager does not seem to support the new window manager hints as "
 "defined on http://www.freedesktop.org. \n"
-"Some XFce features may not work as intended."
+"Some Xfce features may not work as intended."
 msgstr ""
 "Trình quản lí cửa sổ của bạn dường như không hỗ trợ các gợi ý cho trình quản "
 "lí cửa sổ như đã được định nghĩa ở http://www.freedesktop.org. \n"
-"Một số tính năng XFce có thể không làm việc."
+"Một số tính năng Xfce có thể không làm việc."
 
 #: panel/controls.c:320 panel/panel.c:412
 msgid "/Add _new item"
@@ -155,12 +155,12 @@ msgid "This item has no configuration options"
 msgstr "Mục này không có tuỳ chọn cấu hình"
 
 #: panel/panel.c:410
-msgid "/XFce Panel"
-msgstr "/Panel XFce"
+msgid "/Xfce Panel"
+msgstr "/Panel Xfce"
 
 #: panel/panel.c:415
-msgid "/_About XFce"
-msgstr "/_Về XFce"
+msgid "/_About Xfce"
+msgstr "/_Về Xfce"
 
 #: panel/panel.c:416
 msgid "/_Help"
@@ -184,8 +184,8 @@ msgstr "/Th_oát"
 
 #: panel/panel.c:812 settings/xfce_settings_plugin.c:82
 #: settings/xfce_settings_dialog.c:649
-msgid "XFce Panel"
-msgstr "Panel XFce"
+msgid "Xfce Panel"
+msgstr "Panel Xfce"
 
 #: panel/icons.c:73
 msgid "Default"
@@ -326,8 +326,8 @@ msgid "Autohide:"
 msgstr "Tự động ẩn:"
 
 #: settings/xfce_settings_dialog.c:663
-msgid "XFce Panel Settings"
-msgstr "Các thiết lập panel XFce"
+msgid "Xfce Panel Settings"
+msgstr "Các thiết lập panel Xfce"
 
 #. Appearance
 #: settings/xfce_settings_dialog.c:675
