--- a/po/xfce4-panel.pot
+++ b/po/xfce4-panel.pot
@@ -119,7 +119,7 @@ msgstr ""
 #, c-format
 msgid ""
 "%s, version %s\n"
-"Part of the XFce Desktop Environment\n"
+"Part of the Xfce Desktop Environment\n"
 "http://www.xfce.org\n"
 msgstr ""
 
@@ -127,7 +127,7 @@ msgstr ""
 msgid ""
 "Your window manager does not seem to support the new window manager hints as "
 "defined on http://www.freedesktop.org. \n"
-"Some XFce features may not work as intended."
+"Some Xfce features may not work as intended."
 msgstr ""
 
 #: panel/controls.c:479
@@ -151,11 +151,11 @@ msgid "This item has no configuration options"
 msgstr ""
 
 #: panel/panel.c:414
-msgid "/XFce Panel"
+msgid "/Xfce Panel"
 msgstr ""
 
 #: panel/panel.c:419
-msgid "/_About XFce"
+msgid "/_About Xfce"
 msgstr ""
 
 #: panel/panel.c:420
@@ -180,7 +180,7 @@ msgstr ""
 
 #: panel/panel.c:814 settings/xfce_settings_plugin.c:82
 #: settings/xfce_settings_dialog.c:649
-msgid "XFce Panel"
+msgid "Xfce Panel"
 msgstr ""
 
 #: panel/icons.c:73
@@ -322,7 +322,7 @@ msgid "Autohide:"
 msgstr ""
 
 #: settings/xfce_settings_dialog.c:663
-msgid "XFce Panel Settings"
+msgid "Xfce Panel Settings"
 msgstr ""
 
 #. Appearance
