--- a/po/cs.po
+++ b/po/cs.po
@@ -116,28 +116,28 @@ msgstr "Spoušteč"
 
 #: panel/main.c:117
 msgid "Are you sure you want to exit?"
-msgstr "Jste si jisti, že chcete ukončit XFce?"
+msgstr "Jste si jisti, že chcete ukončit Xfce?"
 
 #: panel/main.c:329
 #, c-format
 msgid ""
 "%s, version %s\n"
-"Part of the XFce Desktop Environment\n"
+"Part of the Xfce Desktop Environment\n"
 "http://www.xfce.org\n"
 msgstr ""
 "%s, verze %s\n"
-"Část XFce Desktop Environment\n"
+"Část Xfce Desktop Environment\n"
 "http://www.xfce.org\n"
 
 #: panel/main.c:361
 msgid ""
 "Your window manager does not seem to support the new window manager hints as "
 "defined on http://www.freedesktop.org. \n"
-"Some XFce features may not work as intended."
+"Some Xfce features may not work as intended."
 msgstr ""
 "Váš window manager jak se zdá nepodporuje window manager hints jak je "
 "definováno na http://www.freedesktop.org. \n"
-"Některé z vlastností XFce nemusí fungovat jek bylo zamýšleno."
+"Některé z vlastností Xfce nemusí fungovat jek bylo zamýšleno."
 
 #: panel/controls.c:320 panel/panel.c:412
 msgid "/Add _new item"
@@ -156,12 +156,12 @@ msgid "This item has no configuration options"
 msgstr "Tato položka nemá žádná nasatvitelné vlastnosti"
 
 #: panel/panel.c:410
-msgid "/XFce Panel"
-msgstr "/XFce Panel"
+msgid "/Xfce Panel"
+msgstr "/Xfce Panel"
 
 #: panel/panel.c:415
-msgid "/_About XFce"
-msgstr "/_O desktopu XFce"
+msgid "/_About Xfce"
+msgstr "/_O desktopu Xfce"
 
 #: panel/panel.c:416
 msgid "/_Help"
@@ -185,8 +185,8 @@ msgstr "/_Konec"
 
 #: panel/panel.c:812 settings/xfce_settings_plugin.c:82
 #: settings/xfce_settings_dialog.c:649
-msgid "XFce Panel"
-msgstr "XFce Panel"
+msgid "Xfce Panel"
+msgstr "Xfce Panel"
 
 #: panel/icons.c:73
 msgid "Default"
@@ -327,8 +327,8 @@ msgid "Autohide:"
 msgstr "Automaticky skrývat:"
 
 #: settings/xfce_settings_dialog.c:663
-msgid "XFce Panel Settings"
-msgstr "XFce Nastavení Panelu"
+msgid "Xfce Panel Settings"
+msgstr "Xfce Nastavení Panelu"
 
 #. Appearance
 #: settings/xfce_settings_dialog.c:675
