--- a/po/es_MX.po
+++ b/po/es_MX.po
@@ -123,18 +123,18 @@ msgstr "¿Está seguro de querer salir?"
 #, c-format
 msgid ""
 "%s, version %s\n"
-"Part of the XFce Desktop Environment\n"
+"Part of the Xfce Desktop Environment\n"
 "http://www.xfce.org\n"
 msgstr ""
 "%s, versión %s\n"
-"Parte del ambiente de escritorio XFce\n"
+"Parte del ambiente de escritorio Xfce\n"
 "http://www.xfce.org\n"
 
 #: panel/main.c:361
 msgid ""
 "Your window manager does not seem to support the new window manager hints as "
 "defined on http://www.freedesktop.org. \n"
-"Some XFce features may not work as intended."
+"Some Xfce features may not work as intended."
 msgstr ""
 "Su gestor de ventanas no soporta el protocolo definido en http://www."
 "freedesktop.org. \n"
@@ -157,12 +157,12 @@ msgid "This item has no configuration options"
 msgstr "Este elemento no tiene opciones de configuración"
 
 #: panel/panel.c:410
-msgid "/XFce Panel"
-msgstr "/Panel XFce"
+msgid "/Xfce Panel"
+msgstr "/Panel Xfce"
 
 #: panel/panel.c:415
-msgid "/_About XFce"
-msgstr "/_Acerca de XFce"
+msgid "/_About Xfce"
+msgstr "/_Acerca de Xfce"
 
 #: panel/panel.c:416
 msgid "/_Help"
@@ -187,8 +187,8 @@ msgstr "/Salir"
 
 #: panel/panel.c:812 settings/xfce_settings_plugin.c:82
 #: settings/xfce_settings_dialog.c:649
-msgid "XFce Panel"
-msgstr "Panel XFce"
+msgid "Xfce Panel"
+msgstr "Panel Xfce"
 
 #: panel/icons.c:73
 msgid "Default"
@@ -329,8 +329,8 @@ msgid "Autohide:"
 msgstr "Ocultar automáticamente:"
 
 #: settings/xfce_settings_dialog.c:663
-msgid "XFce Panel Settings"
-msgstr "Configuración del panel XFce"
+msgid "Xfce Panel Settings"
+msgstr "Configuración del panel Xfce"
 
 #. Appearance
 #: settings/xfce_settings_dialog.c:675
@@ -397,7 +397,7 @@ msgstr "Mostrar segundos:"
 
 #: plugins/clock/clock.c:585
 msgid "Xfce Clock"
-msgstr "Reloj XFce"
+msgstr "Reloj Xfce"
 
 #: plugins/pager/pager.c:271
 msgid "Graphical pager"
@@ -565,8 +565,8 @@ msgstr "Revisar correo"
 #~ msgid "Trash can"
 #~ msgstr "Bote de basura"
 
-#~ msgid "XFce 4"
-#~ msgstr "XFce 4"
+#~ msgid "Xfce 4"
+#~ msgstr "Xfce 4"
 
 #~ msgid "By Olivier Fourdan (c) 1997-2003"
 #~ msgstr "Por Olivier Fourdan (c) 1997-2003"
