--- a/po/eu.po
+++ b/po/eu.po
@@ -123,7 +123,7 @@ msgstr "Ziur irten nahi duzula?"
 #, c-format
 msgid ""
 "%s, version %s\n"
-"Part of the XFce Desktop Environment\n"
+"Part of the Xfce Desktop Environment\n"
 "http://www.xfce.org\n"
 msgstr ""
 "%s, bertsioa%s\n"
@@ -134,7 +134,7 @@ msgstr ""
 msgid ""
 "Your window manager does not seem to support the new window manager hints as "
 "defined on http://www.freedesktop.org. \n"
-"Some XFce features may not work as intended."
+"Some Xfce features may not work as intended."
 msgstr ""
 "Zure lehio kudeatzaileak badirudi ez dituela funtzio berriak onartzen "
 "http://www.freedesktop.org.-en agertzen den bezala \n"
@@ -157,16 +157,16 @@ msgid "This item has no configuration options"
 msgstr "Elementu honek ez ditu ezarpen aukerak"
 
 #: panel/panel.c:121
-msgid "/XFce Panel"
-msgstr "/XFce Panela"
+msgid "/Xfce Panel"
+msgstr "/Xfce Panela"
 
 #: panel/panel.c:126
 msgid "/_Settings manager"
 msgstr "/Konfigurazio administratzailea"
 
 #: panel/panel.c:128
-msgid "/_About XFce"
-msgstr "/_XFce-i buruz"
+msgid "/_About Xfce"
+msgstr "/_Xfce-i buruz"
 
 #: panel/panel.c:129
 msgid "/_Help"
@@ -182,8 +182,8 @@ msgstr "/Irten"
 
 #: panel/panel.c:489 settings/xfce_settings_plugin.c:82
 #: settings/xfce_settings_dialog.c:649
-msgid "XFce Panel"
-msgstr "XFce Panela"
+msgid "Xfce Panel"
+msgstr "Xfce Panela"
 
 #: panel/icons.c:73
 msgid "Default"
@@ -324,8 +324,8 @@ msgid "Autohide:"
 msgstr "Automatikoki ezkutatu"
 
 #: settings/xfce_settings_dialog.c:663
-msgid "XFce Panel Settings"
-msgstr "XFce-ko panelaren konfigurazioa"
+msgid "Xfce Panel Settings"
+msgstr "Xfce-ko panelaren konfigurazioa"
 
 #. Appearance
 #: settings/xfce_settings_dialog.c:675
@@ -552,8 +552,8 @@ msgstr "Posta begiratu"
 #~ msgid "Add item"
 #~ msgstr "Añadir nuevo elemento"
 
-#~ msgid "XFce Desktop Environment"
-#~ msgstr "Entorno de Escritorio XFce"
+#~ msgid "Xfce Desktop Environment"
+#~ msgstr "Entorno de Escritorio Xfce"
 
 #~ msgid "Copyright 2002-2003 by Olivier Fourdan"
 #~ msgstr "Copyright 2002-2003, Olivier Fourdan"
@@ -576,8 +576,8 @@ msgstr "Posta begiratu"
 #~ msgid "Trash can"
 #~ msgstr "Cubo de basura"
 
-#~ msgid "XFce 4"
-#~ msgstr "XFce 4"
+#~ msgid "Xfce 4"
+#~ msgstr "Xfce 4"
 
 #~ msgid "By Olivier Fourdan (c) 1997-2003"
 #~ msgstr "Por Olivier Fourdan (c) 1997-2003"
