--- a/po/fr.po
+++ b/po/fr.po
@@ -124,22 +124,22 @@ msgstr "Êtes-vous sûr de vouloir quitter ?"
 #, c-format
 msgid ""
 "%s, version %s\n"
-"Part of the XFce Desktop Environment\n"
+"Part of the Xfce Desktop Environment\n"
 "http://www.xfce.org\n"
 msgstr ""
 "%s, version %s\n"
-"Élément  de l'environnement de bureau XFce\n"
+"Élément  de l'environnement de bureau Xfce\n"
 "http://www.xfce.org\n"
 
 #: panel/main.c:361
 msgid ""
 "Your window manager does not seem to support the new window manager hints as "
 "defined on http://www.freedesktop.org. \n"
-"Some XFce features may not work as intended."
+"Some Xfce features may not work as intended."
 msgstr ""
 "Votre gestionnaire de fenêtres ne semble pas inclure le  support étendu "
 "definit sur http://www.freedesktop.org. \n"
-"Certaines fonctionalités de XFce ne fonctionneront pas correctement."
+"Certaines fonctionalités de Xfce ne fonctionneront pas correctement."
 
 #: panel/controls.c:320 panel/panel.c:412
 msgid "/Add _new item"
@@ -158,12 +158,12 @@ msgid "This item has no configuration options"
 msgstr "Cette entrée n'a pas d'option de configuration"
 
 #: panel/panel.c:410
-msgid "/XFce Panel"
-msgstr "/Panneau XFce"
+msgid "/Xfce Panel"
+msgstr "/Panneau Xfce"
 
 #: panel/panel.c:415
-msgid "/_About XFce"
-msgstr "/_A propos de XFce"
+msgid "/_About Xfce"
+msgstr "/_A propos de Xfce"
 
 #: panel/panel.c:416
 msgid "/_Help"
@@ -188,8 +188,8 @@ msgstr "/Sor_tir"
 
 #: panel/panel.c:812 settings/xfce_settings_plugin.c:82
 #: settings/xfce_settings_dialog.c:649
-msgid "XFce Panel"
-msgstr "Panneau XFce"
+msgid "Xfce Panel"
+msgstr "Panneau Xfce"
 
 #: panel/icons.c:73
 msgid "Default"
@@ -330,8 +330,8 @@ msgid "Autohide:"
 msgstr "Masquer automatiquement:"
 
 #: settings/xfce_settings_dialog.c:663
-msgid "XFce Panel Settings"
-msgstr "Paramètres du Panneau XFce"
+msgid "Xfce Panel Settings"
+msgstr "Paramètres du Panneau Xfce"
 
 #. Appearance
 #: settings/xfce_settings_dialog.c:675
