--- a/po/ko.po
+++ b/po/ko.po
@@ -122,7 +122,7 @@ msgstr "종료하시겠습니까?"
 #, c-format
 msgid ""
 "%s, version %s\n"
-"Part of the XFce Desktop Environment\n"
+"Part of the Xfce Desktop Environment\n"
 "http://www.xfce.org\n"
 msgstr ""
 
@@ -130,11 +130,11 @@ msgstr ""
 msgid ""
 "Your window manager does not seem to support the new window manager hints as "
 "defined on http://www.freedesktop.org. \n"
-"Some XFce features may not work as intended."
+"Some Xfce features may not work as intended."
 msgstr ""
 "사용하시는 창관리자는 http://www.freedesktop.org에서 규정한 새로운 창관리자 "
 "힌트를 지원하지 않는 것 같습니다.\n"
-"따라서 XFce의 일부 기능이 원하는 데로 동작하지 않을 수도 있습니다."
+"따라서 Xfce의 일부 기능이 원하는 데로 동작하지 않을 수도 있습니다."
 
 #: panel/controls.c:479
 msgid "Removing the item will also remove its popup menu."
@@ -157,12 +157,12 @@ msgid "This item has no configuration options"
 msgstr "이 아이템은 속성을 정의할 수 없습니다."
 
 #: panel/panel.c:414
-msgid "/XFce Panel"
-msgstr "/XFce 패널"
+msgid "/Xfce Panel"
+msgstr "/Xfce 패널"
 
 #: panel/panel.c:419
-msgid "/_About XFce"
-msgstr "/XFce에 대하여...(_A)"
+msgid "/_About Xfce"
+msgstr "/Xfce에 대하여...(_A)"
 
 #: panel/panel.c:420
 msgid "/_Help"
@@ -186,7 +186,7 @@ msgstr "/종료(_x)"
 
 #: panel/panel.c:812 settings/xfce_settings_plugin.c:82
 #: settings/xfce_settings_dialog.c:649
-msgid "XFce Panel"
+msgid "Xfce Panel"
 msgstr "XFcae 패널"
 
 #: panel/icons.c:73
@@ -328,8 +328,8 @@ msgid "Autohide:"
 msgstr "자동 숨김:"
 
 #: settings/xfce_settings_dialog.c:663
-msgid "XFce Panel Settings"
-msgstr "XFce 패널 설정"
+msgid "Xfce Panel Settings"
+msgstr "Xfce 패널 설정"
 
 #. Appearance
 #: settings/xfce_settings_dialog.c:675
@@ -396,7 +396,7 @@ msgstr "초:"
 
 #: plugins/clock/clock.c:585
 msgid "Xfce Clock"
-msgstr "XFce 시계"
+msgstr "Xfce 시계"
 
 #: plugins/pager/pager.c:271
 msgid "Graphical pager"
