--- a/po/zh_CN.po
+++ b/po/zh_CN.po
@@ -122,22 +122,22 @@ msgstr "你确定要退出吗?"
 #, c-format
 msgid ""
 "%s, version %s\n"
-"Part of the XFce Desktop Environment\n"
+"Part of the Xfce Desktop Environment\n"
 "http://www.xfce.org\n"
 msgstr ""
 "%s, 版本 %s\n"
-"XFce桌面环境的组成部分\n"
+"Xfce桌面环境的组成部分\n"
 "http://www.xfce.org\n"
 
 #: panel/main.c:361
 msgid ""
 "Your window manager does not seem to support the new window manager hints as "
 "defined on http://www.freedesktop.org. \n"
-"Some XFce features may not work as intended."
+"Some Xfce features may not work as intended."
 msgstr ""
 "你的窗口管理器似乎不支持http://www.freedesktop.org所定义的新的窗口管理器提"
 "示 \n"
-"某些XFce的功能可能无法正常运行。"
+"某些Xfce的功能可能无法正常运行。"
 
 #: panel/controls.c:320 panel/panel.c:412
 msgid "/Add _new item"
@@ -156,12 +156,12 @@ msgid "This item has no configuration options"
 msgstr "该条目没有配置选项"
 
 #: panel/panel.c:410
-msgid "/XFce Panel"
-msgstr "/XFce启动面板"
+msgid "/Xfce Panel"
+msgstr "/Xfce启动面板"
 
 #: panel/panel.c:415
-msgid "/_About XFce"
-msgstr "/关于XFce(_A)"
+msgid "/_About Xfce"
+msgstr "/关于Xfce(_A)"
 
 #: panel/panel.c:416
 msgid "/_Help"
@@ -185,8 +185,8 @@ msgstr "/退出(_X)"
 
 #: panel/panel.c:812 settings/xfce_settings_plugin.c:82
 #: settings/xfce_settings_dialog.c:649
-msgid "XFce Panel"
-msgstr "XFce面板"
+msgid "Xfce Panel"
+msgstr "Xfce面板"
 
 #: panel/icons.c:73
 msgid "Default"
@@ -327,8 +327,8 @@ msgid "Autohide:"
 msgstr "自动隐藏"
 
 #: settings/xfce_settings_dialog.c:663
-msgid "XFce Panel Settings"
-msgstr "XFce面板配置"
+msgid "Xfce Panel Settings"
+msgstr "Xfce面板配置"
 
 #. Appearance
 #: settings/xfce_settings_dialog.c:675
@@ -395,7 +395,7 @@ msgstr "显示秒:"
 
 #: plugins/clock/clock.c:585
 msgid "Xfce Clock"
-msgstr "XFce时钟"
+msgstr "Xfce时钟"
 
 #: plugins/pager/pager.c:271
 #, fuzzy
