--- a/po/zh_TW.po
+++ b/po/zh_TW.po
@@ -120,22 +120,22 @@ msgstr "你確定要退出？"
 #, c-format
 msgid ""
 "%s, version %s\n"
-"Part of the XFce Desktop Environment\n"
+"Part of the Xfce Desktop Environment\n"
 "http://www.xfce.org\n"
 msgstr ""
 "%s, 版本 %s\n"
-"XFce 桌面環境的組成部分\n"
+"Xfce 桌面環境的組成部分\n"
 "http://www.xfce.org\n"
 
 #: panel/main.c:361
 msgid ""
 "Your window manager does not seem to support the new window manager hints as "
 "defined on http://www.freedesktop.org. \n"
-"Some XFce features may not work as intended."
+"Some Xfce features may not work as intended."
 msgstr ""
 "你的視窗管理程式似乎不支援 http://www.freedesktop.org 所定義的視窗管理程式提"
 "示。\n"
-"某些 XFce 的功能可能無法正常運行。"
+"某些 Xfce 的功能可能無法正常運行。"
 
 #: panel/controls.c:320 panel/panel.c:412
 msgid "/Add _new item"
@@ -154,12 +154,12 @@ msgid "This item has no configuration options"
 msgstr "該項目沒有設定選項"
 
 #: panel/panel.c:410
-msgid "/XFce Panel"
-msgstr "/XFce 啟動面板"
+msgid "/Xfce Panel"
+msgstr "/Xfce 啟動面板"
 
 #: panel/panel.c:415
-msgid "/_About XFce"
-msgstr "/關於 XFce(_A)"
+msgid "/_About Xfce"
+msgstr "/關於 Xfce(_A)"
 
 #: panel/panel.c:416
 msgid "/_Help"
@@ -183,8 +183,8 @@ msgstr "/離開(_X)"
 
 #: panel/panel.c:812 settings/xfce_settings_plugin.c:82
 #: settings/xfce_settings_dialog.c:649
-msgid "XFce Panel"
-msgstr "XFce 面板"
+msgid "Xfce Panel"
+msgstr "Xfce 面板"
 
 #: panel/icons.c:73
 msgid "Default"
@@ -325,8 +325,8 @@ msgid "Autohide:"
 msgstr "自動隱藏："
 
 #: settings/xfce_settings_dialog.c:663
-msgid "XFce Panel Settings"
-msgstr "XFce 面板設定"
+msgid "Xfce Panel Settings"
+msgstr "Xfce 面板設定"
 
 #. Appearance
 #: settings/xfce_settings_dialog.c:675
@@ -393,7 +393,7 @@ msgstr "顯示秒："
 
 #: plugins/clock/clock.c:585
 msgid "Xfce Clock"
-msgstr "XFce 時鐘"
+msgstr "Xfce 時鐘"
 
 #: plugins/pager/pager.c:271
 msgid "Graphical pager"
